test/integration/cli-args/filename_error.expected
  $ ../../../../install/default/bin/stanc --filename-in-msg=foo.stan  filename_error.stan
Semantic error in 'filename_error.stan', line 3, column 17 to column 18:
   -------------------------------------------------
     1:  transformed data {
     2:      real p;
     3:      real q = p + a;
                          ^
     4:  }
   -------------------------------------------------

Identifier 'a' not in scope.
